refactor: edit for pixelperfect

--- a/singolo1.html
+++ b/singolo1.html
@@ -28,7 +28,6 @@
 		</div>
     </header>
     
-
 	<main>
 		<div class="wrapper">
 			<div class="slider">
@@ -39,8 +38,6 @@
 	        </div>
         </div>
     </main>
-    
-
 
 	<footer class="services">
         <div class="wrapper">
@@ -52,7 +49,7 @@
             <div class="services_layout">
                 <div class="element">
                     <div class="services_logo">
-                        <img src="./assets/img/singolo1/pen.png" alt="pen">
+                        <img src="./assets/img/singolo1/pen.png" alt="pencil">
                     </div>
                     <div class="element_title">Custom Design</div>
                     <p class="element_text">Curabitur vestibulum eget mauris quis laoreet. 
